--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                 <div class="project-card">
                     <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Customer Churn Prediction" class="project-image">
                     <div class="project-info">
-                        <h3 class="project-title">Customer Churn Prediction</h3>
-                        <p class="project-description">Developed a machine learning model to predict customer churn for a telecommunications company.</p>
+                        <h3 class="project-title">Coffee-Sales-Dashboard</h3>
+                        <p class="project-description">Developed an advanced Coffee Sales Dashboard to provide a comprehensive analysis of sales performance and drive actionable business insights.</p>
                         <ul class="project-details">
-                            <li>Used Python, Pandas, and Scikit-learn for data preprocessing and model development</li>
-                            <li>Implemented Random Forest and Gradient Boosting algorithms</li>
-                            <li>Achieved 92% accuracy in predicting customer churn</li>
-                            <li>Resulted in a 25% reduction in customer churn rate</li>
-                            <a href="https://github.com/BBhaveshkumar/SQL-project-music" target="_blank">
+                            <li>Variations in sales by day of the week and hour of the day.</li>
+                            <li>Monthly revenue patterns for seasonal performance analysis.</li>
+                            <li>Best-selling products based on revenue and sales quantity</li>
+                            <li>Performance comparisons across store locations to identify top-performing outlets.</li>
+                            <a href="https://github.com/BBhaveshkumar/Coffee-Sales-Dashboard-" target="_blank">
                                 <button type="button"><b>More</b></button>
                             </a>
                         </ul>
