--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <ul class="project-details">
                             <li>Variations in sales by day of the week and hour of the day.</li>
                             <li>Monthly revenue patterns for seasonal performance analysis.</li>
-                            <li>Best-selling products based on revenue and sales quantity</li>
+                            <li>Best-selling products based on revenue and sales quantit.y</li>
                             <li>Performance comparisons across store locations to identify top-performing outlets.</li>
                             <a href="https://github.com/BBhaveshkumar/Coffee-Sales-Dashboard-" target="_blank">
                                 <button type="button"><b>More</b></button>
@@ -115,7 +115,7 @@
                         <p class="project-description">Analyzed a music playlist database using <b>SQL</b>, generating detailed reports on user engagement that identified trends and opportunities, leading to a 15% increase in store revenue over six months.</p>
                         <ul class="project-details">
                             <li>Find the most senior employee by job title.</li>
-                            <li>List countries with the highest number of invoice</li>
+                            <li>List countries with the highest number of invoice.</li>
                             <li>Identify the top 3 invoice totals. And more</li>
                             <a href="https://github.com/BBhaveshkumar/SQL-project-music" target="_blank">
                                 <button type="button"><b>More</b></button>
@@ -127,13 +127,13 @@
                 <div class="project-card">
                     <img src="https://images.unsplash.com/photo-1518186285589-2f7649de83e0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Sentiment Analysis Tool" class="project-image">
                     <div class="project-info">
-                        <h3 class="project-title">Sentiment Analysis Tool</h3>
-                        <p class="project-description">Built a sentiment analysis tool to analyze customer feedback for a large e-commerce platform.</p>
+                        <h3 class="project-title">Credit_Card_Financial_Dashboard</h3>
+                        <p class="project-description">Created a dynamic dashboard using SQL database transaction and customer data; delivered real-time analytics that enhanced decision-making and increased customer retention by 35%.</p>
                         <ul class="project-details">
-                            <li>Used Python, NLTK, and spaCy for natural language processing</li>
-                            <li>Implemented a BERT-based model for sentiment classification</li>
-                            <li>Achieved 89% accuracy in sentiment prediction</li>
-                            <li>Resulted in a 20% improvement in customer satisfaction scores</li>
+                            <li>Enhanced data analysis systems to track key performance metrics and trends effectively.</li>
+                            <li>Achieved a 30% reduction in reporting time through streamlined processes.</li>
+                            <li>Increased actionable insights for strategic planning by 25%.</li>
+                            <li>Resulted in improved decision-making and operational efficiency.</li>
                             <a href="https://example.com/music-databases" target="_blank">
                                 <button type="button"><b>More</b></button>
                             </a>
