--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <li>Achieved a 30% reduction in reporting time through streamlined processes.</li>
                             <li>Increased actionable insights for strategic planning by 25%.</li>
                             <li>Resulted in improved decision-making and operational efficiency.</li>
-                            <a href="https://example.com/music-databases" target="_blank">
+                            <a href="https://github.com/BBhaveshkumar/Credit_Card_Financial_Dashboard" target="_blank">
                                 <button type="button"><b>More</b></button>
                             </a>
                         </ul>
